--- a/src/resources/fxml/planTreningowy.fxml
+++ b/src/resources/fxml/planTreningowy.fxml
@@ -3,9 +3,13 @@
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="konkurs.fx_contollers.PlanTreninguController">
@@ -26,29 +30,51 @@
    <left>
       <AnchorPane prefHeight="303.0" prefWidth="26.0" BorderPane.alignment="CENTER" />
    </left>
+   <right>
+      <AnchorPane prefHeight="303.0" prefWidth="184.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#addPlan" prefHeight="25.0" prefWidth="130.0" text="Dodaj plan trenigowy" />
+            <Button layoutX="14.0" layoutY="55.0" mnemonicParsing="false" onAction="#dropPT" prefHeight="25.0" prefWidth="130.0" text="Usuń plan trenigowy" />
+            <Button layoutX="14.0" layoutY="98.0" mnemonicParsing="false" onAction="#viewPlan" prefHeight="25.0" prefWidth="130.0" text="Wyświetl plan" />
+         </children>
+      </AnchorPane>
+   </right>
    <center>
-      <Accordion prefHeight="303.0" prefWidth="369.0" BorderPane.alignment="CENTER">
+      <Accordion BorderPane.alignment="CENTER">
          <panes>
-            <TitledPane animated="false" prefHeight="338.0" prefWidth="390.0" text="Moje plany trenigowe">
+            <TitledPane animated="false" prefHeight="278.0" prefWidth="500.0" text="Moje plany trenigowe">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  <ScrollPane>
+                     <content>
+                        <GridPane fx:id="grid1" prefHeight="250.0" prefWidth="376.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                        </GridPane>
+                     </content>
+                  </ScrollPane>
                </content>
             </TitledPane>
             <TitledPane animated="false" text="Podstawowe plany trenigowe">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  <ScrollPane>
+                     <content>
+                        <GridPane fx:id="grid2" prefHeight="242.0" prefWidth="369.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                        </GridPane>
+                     </content>
+                  </ScrollPane>
                </content>
             </TitledPane>
          </panes>
       </Accordion>
    </center>
-   <right>
-      <AnchorPane prefHeight="303.0" prefWidth="184.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#addPlan" prefHeight="25.0" prefWidth="130.0" text="Dodaj plan trenigowy" />
-            <Button layoutX="14.0" layoutY="55.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Usuń plan trenigowy" />
-            <Button layoutX="14.0" layoutY="98.0" mnemonicParsing="false" onAction="#viewPlan" prefHeight="25.0" prefWidth="130.0" text="Wyświetl plan" />
-         </children>
-      </AnchorPane>
-   </right>
 </BorderPane>
