--- a/src/resources/fxml/BMI.fxml
+++ b/src/resources/fxml/BMI.fxml
@@ -21,7 +21,7 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <TextField fx:id="masaCiala" layoutX="169.0" layoutY="65.0" prefHeight="25.0" prefWidth="300.0" text="(jak bd podana w informacjach to zablokowane)" AnchorPane.leftAnchor="169.0" AnchorPane.rightAnchor="51.0" />
+            <TextField fx:id="masaCiala" layoutX="169.0" layoutY="65.0" prefHeight="25.0" prefWidth="300.0" AnchorPane.leftAnchor="169.0" AnchorPane.rightAnchor="51.0" />
             <Label layoutX="14.0" layoutY="218.0" prefHeight="32.0" prefWidth="156.0" text="Twoje BMI to:" AnchorPane.leftAnchor="14.0">
                <font>
                   <Font size="18.0" />
