--- a/src/resources/fxml/Gym.fxml
+++ b/src/resources/fxml/Gym.fxml
@@ -2,16 +2,11 @@
 
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="konkurs.fx_contollers.GymController">
@@ -21,7 +16,7 @@
    <right>
       <AnchorPane prefHeight="313.0" prefWidth="191.0">
          <children>
-            <TitledPane animated="false" layoutX="15.0" layoutY="81.0" prefHeight="126.0" prefWidth="161.0" text="Zawartość dodatkowa">
+            <TitledPane animated="false" layoutX="15.0" prefHeight="126.0" prefWidth="161.0" text="Zawartość dodatkowa">
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="96.0" prefWidth="159.0">
                      <children>
@@ -49,8 +44,6 @@
                   </AnchorPane>
                </content>
             </TitledPane>
-            <DatePicker fx:id="datePicker" layoutX="14.0" layoutY="14.0" prefHeight="25.0" prefWidth="110.0" />
-            <Button fx:id="idzDo" layoutX="124.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="50.0" text="Idź do" />
          </children>
       </AnchorPane>
    </right>
@@ -60,8 +53,7 @@
    <bottom>
       <AnchorPane prefHeight="65.0" prefWidth="522.0" BorderPane.alignment="CENTER">
          <children>
-            <Button layoutX="14.0" layoutY="20.0" mnemonicParsing="false" onAction="#zapisz" prefHeight="25.0" prefWidth="120.0" text="Zapisz zmiany" AnchorPane.leftAnchor="14.0" />
-            <Button layoutX="134.0" layoutY="20.0" mnemonicParsing="false" onAction="#edytuj" prefHeight="25.0" prefWidth="120.0" text="Edytuj" AnchorPane.leftAnchor="134.0" />
+            <Button layoutX="33.0" layoutY="20.0" mnemonicParsing="false" onAction="#zapisz" prefHeight="25.0" prefWidth="120.0" text="Zapisz zmiany" AnchorPane.leftAnchor="33.0" />
             <Button fx:id="btnReturn" layoutX="466.0" layoutY="20.0" mnemonicParsing="false" onAction="#onBtnReturn" prefHeight="25.0" prefWidth="120.0" text="Powrót" AnchorPane.rightAnchor="14.0" />
          </children>
       </AnchorPane>
@@ -85,31 +77,13 @@
                               <Label layoutX="7.0" layoutY="6.0" prefHeight="17.0" prefWidth="162.0" text="Masa ciała(kg):" />
                               <Label layoutX="7.0" layoutY="31.0" prefHeight="17.0" prefWidth="160.0" text="Obwód klatki piersiowej(cm):" />
                               <Label layoutX="7.0" layoutY="59.0" prefHeight="17.0" prefWidth="161.0" text="Obwód brzucha(cm):" />
-                              <Label layoutX="7.0" layoutY="110.0" prefHeight="17.0" prefWidth="100.0" text="coś tam dalej" />
                               <Label layoutX="7.0" layoutY="84.0" prefHeight="17.0" prefWidth="160.0" text="Obwód bicepsa(cm):" />
                               <TextField fx:id="masaCiala" layoutX="170.0" layoutY="2.0" prefHeight="25.0" prefWidth="200.0" />
                               <TextField fx:id="obwodBrz" layoutX="170.0" layoutY="54.0" prefHeight="25.0" prefWidth="200.0" />
                               <TextField fx:id="obwodKP" layoutX="170.0" layoutY="28.0" prefHeight="25.0" prefWidth="200.0" />
                               <TextField fx:id="obwodBic" layoutX="170.0" layoutY="80.0" prefHeight="25.0" prefWidth="200.0" />
-                              <TextField layoutX="170.0" layoutY="106.0" prefHeight="25.0" prefWidth="200.0" />
                            </children></AnchorPane>
                   </content>
-                </TitledPane>
-                <TitledPane fx:id="planT" animated="false" text="Plan treningu">
-                     <content>
-                        <ScrollPane prefHeight="200.0" prefWidth="200.0">
-                           <content>
-                              <GridPane fx:id="grid" prefHeight="181.0" prefWidth="362.0">
-                                <columnConstraints>
-                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                </columnConstraints>
-                                <rowConstraints>
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                </rowConstraints>
-                              </GridPane>
-                           </content>
-                        </ScrollPane>
-                     </content>
                 </TitledPane>
               </panes>
             </Accordion>
