--- a/src/resources/fxml/LBM.fxml
+++ b/src/resources/fxml/LBM.fxml
@@ -22,7 +22,7 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <TextField fx:id="masaCiala" layoutX="169.0" layoutY="65.0" prefHeight="25.0" prefWidth="300.0" text="(jak bd podana w informacjach to zablokowane)" AnchorPane.leftAnchor="170.0" AnchorPane.rightAnchor="50.0" />
+            <TextField fx:id="masaCiala" layoutX="169.0" layoutY="65.0" prefHeight="25.0" prefWidth="300.0" AnchorPane.leftAnchor="170.0" AnchorPane.rightAnchor="50.0" />
             <Label layoutX="14.0" layoutY="218.0" prefHeight="32.0" prefWidth="299.0" text="Masa ciała bez tkanki tłuszczowej to:" AnchorPane.leftAnchor="14.0">
                <font>
                   <Font size="18.0" />
