--- a/src/resources/fxml/calc.fxml
+++ b/src/resources/fxml/calc.fxml
@@ -29,7 +29,7 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <TextField fx:id="masaCiala" layoutX="170.0" layoutY="107.0" prefHeight="25.0" prefWidth="300.0" text="(jak bd podana w informacjach to zablokowane)" AnchorPane.leftAnchor="170.0" AnchorPane.rightAnchor="50.0" />
+            <TextField fx:id="masaCiala" layoutX="170.0" layoutY="107.0" prefHeight="25.0" prefWidth="300.0" AnchorPane.leftAnchor="170.0" AnchorPane.rightAnchor="50.0" />
             <Label layoutX="14.0" layoutY="218.0" prefHeight="32.0" prefWidth="156.0" text="Spalone kalorie:" AnchorPane.leftAnchor="14.0">
                <font>
                   <Font size="18.0" />
