--- a/src/resources/fxml/BMI.fxml
+++ b/src/resources/fxml/BMI.fxml
@@ -7,28 +7,28 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="konkurs.fx_contollers.BMIController">
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="konkurs.fx_contollers.BMIController" style="-fx-background-color: linear-gradient(to bottom, rgba(96,108,136,1) 0%,rgba(63,76,107,1) 100%);;">
    <center>
       <AnchorPane prefHeight="400.0" prefWidth="556.0" BorderPane.alignment="TOP_CENTER">
          <children>
-            <Label layoutX="14.0" layoutY="14.0" prefHeight="32.0" prefWidth="156.0" text="Wzrost (m):" AnchorPane.leftAnchor="14.0">
+            <Label layoutX="14.0" layoutY="14.0" prefHeight="32.0" prefWidth="156.0" text="%gym.wzrost_cm" AnchorPane.leftAnchor="14.0">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="63.0" prefHeight="32.0" prefWidth="156.0" text="Masa ciała (kg):" AnchorPane.leftAnchor="14.0">
+            <Label layoutX="14.0" layoutY="63.0" prefHeight="32.0" prefWidth="156.0" text="%gym.masa_kg" AnchorPane.leftAnchor="14.0">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
             <TextField fx:id="masaCiala" layoutX="169.0" layoutY="65.0" prefHeight="25.0" prefWidth="300.0" AnchorPane.leftAnchor="169.0" AnchorPane.rightAnchor="51.0" />
-            <Label layoutX="14.0" layoutY="218.0" prefHeight="32.0" prefWidth="156.0" text="Twoje BMI to:" AnchorPane.leftAnchor="14.0">
+            <Label layoutX="14.0" layoutY="218.0" prefHeight="32.0" prefWidth="156.0" text="%gym.BMI" AnchorPane.leftAnchor="14.0">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
             <TextField fx:id="BMI" editable="false" layoutX="169.0" layoutY="222.0" prefHeight="25.0" prefWidth="300.0" AnchorPane.leftAnchor="169.0" AnchorPane.rightAnchor="51.0" />
-            <Button fx:id="oblicz" layoutX="364.0" layoutY="160.0" mnemonicParsing="false" onAction="#oblicz" prefHeight="25.0" prefWidth="106.0" text="Oblicz" AnchorPane.rightAnchor="50.0" />
+            <Button fx:id="oblicz" layoutX="364.0" layoutY="160.0" mnemonicParsing="false" onAction="#oblicz" prefHeight="25.0" prefWidth="106.0" text="%gym.oblicz" AnchorPane.rightAnchor="50.0" />
             <TextField fx:id="wzrost" layoutX="170.0" layoutY="16.0" prefHeight="25.0" prefWidth="300.0" AnchorPane.leftAnchor="169.0" AnchorPane.rightAnchor="51.0" />
          </children>
       </AnchorPane>
@@ -36,7 +36,7 @@
    <bottom>
       <AnchorPane prefHeight="45.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="btnReturn" layoutX="466.0" layoutY="2.0" mnemonicParsing="false" onAction="#onBtnReturn" prefHeight="25.0" prefWidth="120.0" text="Powrót" AnchorPane.rightAnchor="14.0" />
+            <Button fx:id="btnReturn" layoutX="466.0" layoutY="2.0" mnemonicParsing="false" onAction="#onBtnReturn" prefHeight="25.0" prefWidth="120.0" text="%gym.return" AnchorPane.rightAnchor="14.0" />
          </children>
       </AnchorPane>
    </bottom>
