--- a/src/resources/fxml/LBM.fxml
+++ b/src/resources/fxml/LBM.fxml
@@ -8,30 +8,30 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="konkurs.fx_contollers.LBMController">
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="konkurs.fx_contollers.LBMController" style="-fx-background-color: linear-gradient(to bottom, rgba(96,108,136,1) 0%,rgba(63,76,107,1) 100%);;">
    <center>
       <AnchorPane prefHeight="400.0" prefWidth="556.0" BorderPane.alignment="TOP_CENTER">
          <children>
-            <Label layoutX="14.0" layoutY="14.0" prefHeight="32.0" prefWidth="156.0" text="Wzrost (cm):" AnchorPane.leftAnchor="14.0">
+            <Label layoutX="14.0" layoutY="14.0" prefHeight="32.0" prefWidth="156.0" text="%gym.wzrost_cm" AnchorPane.leftAnchor="14.0">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="63.0" prefHeight="32.0" prefWidth="156.0" text="Masa ciała (kg):" AnchorPane.leftAnchor="14.0">
+            <Label layoutX="14.0" layoutY="63.0" prefHeight="32.0" prefWidth="156.0" text="%gym.masa_kg" AnchorPane.leftAnchor="14.0">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
             <TextField fx:id="masaCiala" layoutX="169.0" layoutY="65.0" prefHeight="25.0" prefWidth="300.0" AnchorPane.leftAnchor="170.0" AnchorPane.rightAnchor="50.0" />
-            <Label layoutX="14.0" layoutY="218.0" prefHeight="32.0" prefWidth="299.0" text="Masa ciała bez tkanki tłuszczowej to:" AnchorPane.leftAnchor="14.0">
+            <Label layoutX="14.0" layoutY="218.0" prefHeight="32.0" prefWidth="299.0" text="%gym.masaLBM" AnchorPane.leftAnchor="14.0">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
             <TextField fx:id="LBM" editable="false" layoutX="313.0" layoutY="222.0" prefHeight="25.0" prefWidth="155.0" AnchorPane.leftAnchor="313.0" AnchorPane.rightAnchor="52.0" />
-            <Button fx:id="oblicz" layoutX="363.0" layoutY="184.0" mnemonicParsing="false" onAction="#oblicz" prefHeight="25.0" prefWidth="106.0" text="Oblicz" AnchorPane.rightAnchor="51.0" />
+            <Button fx:id="oblicz" layoutX="363.0" layoutY="184.0" mnemonicParsing="false" onAction="#oblicz" prefHeight="25.0" prefWidth="106.0" text="%gym.oblicz" AnchorPane.rightAnchor="51.0" />
             <TextField fx:id="wzrost" layoutX="170.0" layoutY="16.0" prefHeight="25.0" prefWidth="300.0" AnchorPane.leftAnchor="170.0" AnchorPane.rightAnchor="50.0" />
-            <Label layoutX="14.0" layoutY="120.0" prefHeight="32.0" prefWidth="156.0" text="Płeć:" AnchorPane.leftAnchor="14.0">
+            <Label layoutX="14.0" layoutY="120.0" prefHeight="32.0" prefWidth="156.0" text="%gym.plec" AnchorPane.leftAnchor="14.0">
                <font>
                   <Font size="18.0" />
                </font>
@@ -43,12 +43,12 @@
    <bottom>
       <AnchorPane prefHeight="45.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="btnReturn" layoutX="466.0" layoutY="2.0" mnemonicParsing="false" onAction="#onBtnReturn" prefHeight="25.0" prefWidth="120.0" text="Powrót" AnchorPane.rightAnchor="14.0" />
+            <Button fx:id="btnReturn" layoutX="466.0" layoutY="2.0" mnemonicParsing="false" onAction="#onBtnReturn" prefHeight="25.0" prefWidth="120.0" text="%gym.return" AnchorPane.rightAnchor="14.0" />
          </children>
       </AnchorPane>
    </bottom>
    <top>
-      <Label alignment="CENTER" maxWidth="3000.0" prefHeight="52.0" prefWidth="600.0" style="-fx-background-color: #FF3333;" text="LBM-masa ciała bez tkanki tłuszczowej" BorderPane.alignment="CENTER">
+      <Label alignment="CENTER" maxWidth="3000.0" prefHeight="52.0" prefWidth="600.0" style="-fx-background-color: #FF3333;" text="LBM - Lean Body Mass" BorderPane.alignment="CENTER">
          <font>
             <Font size="25.0" />
          </font>
