--- a/src/resources/fxml/addPlanT.fxml
+++ b/src/resources/fxml/addPlanT.fxml
@@ -13,14 +13,14 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="konkurs.fx_contollers.addPlanTController">
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="konkurs.fx_contollers.addPlanTController" style="-fx-background-color: linear-gradient(to bottom, rgba(96,108,136,1) 0%,rgba(63,76,107,1) 100%);;">
    <bottom>
       <AnchorPane prefHeight="60.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="btnReturn" layoutX="466.0" layoutY="26.0" mnemonicParsing="false" onAction="#onBtnReturn" prefHeight="25.0" prefWidth="120.0" text="Powrót" AnchorPane.rightAnchor="14.0" />
-            <Button layoutX="314.0" layoutY="26.0" mnemonicParsing="false" onAction="#zapisz" prefHeight="25.0" prefWidth="120.0" text="Zapisz" AnchorPane.leftAnchor="314.0" />
+            <Button fx:id="btnReturn" layoutX="466.0" layoutY="26.0" mnemonicParsing="false" onAction="#onBtnReturn" prefHeight="25.0" prefWidth="120.0" text="%gym.return" AnchorPane.rightAnchor="14.0" />
+            <Button layoutX="314.0" layoutY="26.0" mnemonicParsing="false" onAction="#zapisz" prefHeight="25.0" prefWidth="120.0" text="%gym.save" AnchorPane.leftAnchor="314.0" />
             <TextField fx:id="nazwa" layoutX="14.0" layoutY="26.0" minHeight="-Infinity" prefHeight="25.0" prefWidth="300.0" AnchorPane.leftAnchor="14.0" />
-            <Label layoutX="14.0" layoutY="4.0" prefHeight="17.0" prefWidth="301.0" text="Nazwa planu:" AnchorPane.leftAnchor="14.0">
+            <Label layoutX="14.0" layoutY="4.0" prefHeight="17.0" prefWidth="301.0" text="%gym.naz_planu" AnchorPane.leftAnchor="14.0">
                <font>
                   <Font size="14.0" />
                </font>
@@ -29,7 +29,7 @@
       </AnchorPane>
    </bottom>
    <top>
-      <Label alignment="CENTER" maxWidth="3000.0" prefHeight="52.0" prefWidth="600.0" style="-fx-background-color: #FF3333;" text="Dodawanie planu treningowego" BorderPane.alignment="CENTER">
+      <Label alignment="CENTER" maxWidth="3000.0" prefHeight="52.0" prefWidth="600.0" style="-fx-background-color: #FF3333;" text="%gym.dod_plan" BorderPane.alignment="CENTER">
          <font>
             <Font size="25.0" />
          </font>
@@ -41,7 +41,7 @@
             <TextField fx:id="powt" layoutX="251.0" layoutY="221.0" minHeight="-Infinity" prefHeight="25.0" prefWidth="137.0" AnchorPane.bottomAnchor="42.0" AnchorPane.leftAnchor="251.0" />
             <TextField fx:id="czas" layoutX="388.0" layoutY="221.0" minHeight="-Infinity" prefHeight="25.0" prefWidth="118.0" AnchorPane.bottomAnchor="42.0" AnchorPane.leftAnchor="388.0" />
             <TextField fx:id="cwicz" layoutX="1.0" layoutY="221.0" minHeight="-Infinity" prefHeight="25.0" prefWidth="250.0" AnchorPane.bottomAnchor="42.0" AnchorPane.leftAnchor="1.0" />
-            <Button layoutX="388.0" layoutY="246.0" mnemonicParsing="false" onAction="#dodaj" prefHeight="25.0" prefWidth="118.0" text="Dodaj" AnchorPane.bottomAnchor="17.0" AnchorPane.leftAnchor="388.0" />
+            <Button layoutX="388.0" layoutY="246.0" mnemonicParsing="false" onAction="#dodaj" prefHeight="25.0" prefWidth="118.0" text="%gym.dodaj" AnchorPane.bottomAnchor="17.0" AnchorPane.leftAnchor="388.0" />
             <ScrollPane layoutX="1.0" layoutY="4.0" prefHeight="213.0" prefWidth="519.0" AnchorPane.bottomAnchor="71.0" AnchorPane.topAnchor="4.0">
                <content>
                   <BorderPane prefHeight="200.0" prefWidth="503.0">
@@ -56,9 +56,9 @@
                               <ColumnConstraints maxWidth="474.0" minWidth="108.0" prefWidth="119.0" />
                            </columnConstraints>
                            <children>
-                              <Label alignment="CENTER" prefHeight="40.0" prefWidth="122.0" style="-fx-background-color: #FF3333; -fx-border-color: black;" text="Czas(min)" GridPane.columnIndex="2" />
-                              <Label alignment="CENTER" prefHeight="40.0" prefWidth="138.0" style="-fx-background-color: #FF3333; -fx-border-color: black;" text="Ilość powtórzeń" GridPane.columnIndex="1" />
-                              <Label alignment="CENTER" prefHeight="153.0" prefWidth="250.0" style="-fx-background-color: #FF3333; -fx-border-color: black;" text="Ćwiczenie" />
+                              <Label alignment="CENTER" prefHeight="40.0" prefWidth="122.0" style="-fx-background-color: #FF3333; -fx-border-color: black;" text="%gym.czas_min" GridPane.columnIndex="2" />
+                              <Label alignment="CENTER" prefHeight="40.0" prefWidth="138.0" style="-fx-background-color: #FF3333; -fx-border-color: black;" text="%gym.powtorzenia" GridPane.columnIndex="1" />
+                              <Label alignment="CENTER" prefHeight="153.0" prefWidth="250.0" style="-fx-background-color: #FF3333; -fx-border-color: black;" text="%gym.cwiczenie" />
                            </children>
                         </GridPane>
                      </top>
