--- a/src/resources/fxml/planTView.fxml
+++ b/src/resources/fxml/planTView.fxml
@@ -12,11 +12,11 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="konkurs.fx_contollers.planTViewController">
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="konkurs.fx_contollers.planTViewController" style="-fx-background-color: linear-gradient(to bottom, rgba(96,108,136,1) 0%,rgba(63,76,107,1) 100%);;">
    <bottom>
       <AnchorPane prefHeight="60.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="btnReturn" layoutX="466.0" layoutY="26.0" mnemonicParsing="false" onAction="#onBtnReturn" prefHeight="25.0" prefWidth="120.0" text="Powrót" AnchorPane.rightAnchor="14.0" />
+            <Button fx:id="btnReturn" layoutX="466.0" layoutY="26.0" mnemonicParsing="false" onAction="#onBtnReturn" prefHeight="25.0" prefWidth="120.0" text="%gym.return" AnchorPane.rightAnchor="14.0" />
          </children>
       </AnchorPane>
    </bottom>
@@ -44,9 +44,9 @@
                               <ColumnConstraints maxWidth="474.0" minWidth="108.0" prefWidth="119.0" />
                            </columnConstraints>
                            <children>
-                              <Label alignment="CENTER" prefHeight="40.0" prefWidth="122.0" style="-fx-background-color: #FF3333; -fx-border-color: black;" text="Czas(min)" GridPane.columnIndex="2" />
-                              <Label alignment="CENTER" prefHeight="40.0" prefWidth="138.0" style="-fx-background-color: #FF3333; -fx-border-color: black;" text="Ilość powtórzeń" GridPane.columnIndex="1" />
-                              <Label alignment="CENTER" prefHeight="153.0" prefWidth="250.0" style="-fx-background-color: #FF3333; -fx-border-color: black;" text="Ćwiczenie" />
+                              <Label alignment="CENTER" prefHeight="40.0" prefWidth="122.0" style="-fx-background-color: #FF3333; -fx-border-color: black;" text="%gym.czas_min" GridPane.columnIndex="2" />
+                              <Label alignment="CENTER" prefHeight="40.0" prefWidth="138.0" style="-fx-background-color: #FF3333; -fx-border-color: black;" text="%gym.powtorzenia" GridPane.columnIndex="1" />
+                              <Label alignment="CENTER" prefHeight="153.0" prefWidth="250.0" style="-fx-background-color: #FF3333; -fx-border-color: black;" text="%gym.cwiczenie" />
                            </children>
                         </GridPane>
                      </top>
